# pbsm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: bridge_class_explaination_WIP.py  face_expressions.py  genesis_vrm_example.py  index.html  jetpack.stl  smplx_full_body.xml  standard_example.py  tts_integration_example.py  vrm_example.py  vroid_model.xml
examples/STL/: J_Bip_C_Chest.stl  J_Bip_C_Head.stl  J_Bip_C_Hips.stl  J_Bip_C_Neck.stl  J_Bip_C_Spine.stl  J_Bip_C_UpperChest.stl  J_Bip_L_Foot.stl  J_Bip_L_Hand.stl  J_Bip_L_Index1.stl  J_Bip_L_Index2.stl  J_Bip_L_Index3.stl  J_Bip_L_Little1.stl  J_Bip_L_Little2.stl  J_Bip_L_Little3.stl  J_Bip_L_LowerArm.stl  J_Bip_L_LowerLeg.stl  J_Bip_L_Middle1.stl  J_Bip_L_Middle2.stl  J_Bip_L_Middle3.stl  J_Bip_L_Ring1.stl  J_Bip_L_Ring2.stl  J_Bip_L_Ring3.stl  J_Bip_L_Shoulder.stl  J_Bip_L_Thumb1.stl  J_Bip_L_Thumb2.stl  J_Bip_L_Thumb3.stl  J_Bip_L_ToeBase.stl  J_Bip_L_UpperArm.stl  J_Bip_L_UpperLeg.stl  J_Bip_R_Foot.stl  J_Bip_R_Hand.stl  J_Bip_R_Index1.stl  J_Bip_R_Index2.stl  J_Bip_R_Index3.stl  J_Bip_R_Little1.stl  J_Bip_R_Little2.stl  J_Bip_R_Little3.stl  J_Bip_R_LowerArm.stl  J_Bip_R_LowerLeg.stl  J_Bip_R_Middle1.stl  (+67 more)
examples/template_model/: meta.json
examples/template_model/v1model/: meta.json
src/pbsm/: genesis_vrm.py  html.py  main.py  viewer_template.html  vrm_audio.py
src/pbsm/mujoco_smplx/: main.py  plot.py  utils.py
src/pbsm/mujoco_vrm/: plot.py  utils.py
tests/: test_utils.py
